<resources>
    <string name="кнопка_сделать_хорошо">Лунная призма! Дай мне силу и работу</string>

    <string name="app_name">TaskForForaSoft</string>
    <string name="search_field">Search</string>
    <string name="album">Album</string>
    <string name="filter_search">filter search</string>


    <string name="album_name">Name album: </string>
    <string name="artist_name">Artist name: </string>
    <string name="number_of_tracks">Number of tracks: </string>
    <string name="date_release">Date release: </string>
    <string name="copyright">Copyright</string>
    <string name="primary_genre_name">Primary genre name: </string>

    <string name="no_matching_albums_available">Нет подходящих альбомов:(</string>
    <string name="error_album_not_found">error_album_not_found</string>
    <string name="music_tracks">Music tracks</string>
</resources>
