<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/label_for_album"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginLeft="10dp">
            </ImageView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/album_name">
                </TextView>

                <TextView
                    android:id="@+id/name_album"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Text">
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="1">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/artist_name">
                </TextView>

                <TextView
                    android:id="@+id/name_artist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="">
                </TextView>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/primary_genre_name">
            </TextView>

            <TextView
                android:id="@+id/primary_genre_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="">
            </TextView>
        </LinearLayout>

        <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_weight="1"-->
            <!--android:orientation="horizontal">-->
            <!--<TextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/copyright">-->
            <!--</TextView>-->

            <!--<TextView-->
                <!--android:id="@+id/copyright"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="">-->
            <!--</TextView>-->
        <!--</LinearLayout>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_release">
            </TextView>

            <TextView
                android:id="@+id/release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="">
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_of_tracks">
            </TextView>

            <TextView
                android:id="@+id/track_сount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="">
            </TextView>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/trackList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/search_track"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/search_field_for_track"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/clear_text"
                android:inputType="text"
                android:cursorVisible="true"
                android:layout_marginLeft="5dp"
                android:hint="Search">
            </EditText>

            <ImageView
                android:id="@+id/clear_text"
                android:src="@drawable/ic_clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginTop="10dp"
                android:paddingRight="20dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:title="clear">
            </ImageView>

        </RelativeLayout>






        <ListView
            android:id="@+id/list_with_tracks"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        </ListView>
    </LinearLayout>

</LinearLayout>